Fixed overflow

--- a/style.css
+++ b/style.css
@@ -57,26 +57,22 @@ body::-webkit-scrollbar-thumb {
 
 .navbar .logo img {
   margin-top: 25px;
-  margin-left: 30px;
+  margin-left: 15px;
 }
 
 .navbar {
   height: 88px;
-  min-width: 99.35vw;
-  margin: -30px 0 0 -128px;
+  margin: -30px 0 0 0px;
+  padding: 0 ;
   background: #131C2B;
   display: flex;
-  justify-content: space-around;
   align-items: normal;
 }
 
-nav {
-  flex: 1;
-  text-align: center;
-}
 
 nav ul {
-  display: inline-block;
+  display: flex;
+  margin: auto;
   list-style-type: none;
 }
 
@@ -149,7 +145,8 @@ p {
   flex-wrap: wrap;
   justify-content: space-around;
 }
-.row-header{
+
+.row-header {
   padding-top: 100px;
 }
 
